# H5Server

./: .gitignore  1.0.0.7.txt  DevelopDoc.docx  README.md  projlist.md  tcp1.cap  数据迁移、更新注意事项.txt  自动化编译说明.txt
Aics/linux-include/: atlconv.h
Aics/publics/: ArithmStruct.h  IActionAnalyzerEngine.h  IAicsBenzbmw.h  IAicsEngine.h  IAicsEngine_win32.h  IAicsErbaGun.h  IAicsNiuNiu.h  IAicsRedxBlack.h  IAicsdragon.h  ILogdbEngine.h  ISecureEngine.h  ISecureHost.h  rsa_priv_key.h  rsa_pub_key.h
Framework/: Game.pro
Framework/Demo/: CMakeCache.txt  Demo  Demo.pro
Framework/GameServer/: .gitignore  AndroidUserItem.cpp  AndroidUserItem.h  AndroidUserManager.cpp  AndroidUserManager.h  CMakeLists.txt  ConnectionPool.cpp  GameServer.cpp  GameServer.h  GameServer.pro  GameServer.txt  GameTableManager.cpp  GameTableManager.h  Makefile_yangzhi  ServerUserItem.cpp  ServerUserItem.h  ServerUserManager.cpp  ServerUserManager.h  TableFrame.cpp  TableFrame.h  TableFrameSink.h  main.cpp
Framework/HallServer/: CMakeCache.txt  CMakeLists.txt  ConnectionPool.h  HallServer.bak.h  HallServer.cpp  HallServer.h  HallServer.pro  IPFinder.cpp  LuckyGame.cpp  LuckyGame.h  Makefile_yangzhi  SMSChannel.h  cmake_install.cmake  hallserver.txt  main.cpp
Framework/HttpServer/: CMakeCache.txt  CMakeLists.txt  HttpServer.cc  HttpServer.h  HttpServer.pro  cmake_install.cmake  main.cpp
Framework/LotteryServer/: CMakeCache.txt  CMakeLists.txt  LotteryServer.pro  cmake_install.cmake
Framework/MatchServer/: AndroidTimedLimit.h  AndroidUserManager.cpp  AndroidUserManager.h  CMakeLists.txt  GameTableManager.cpp  GameTableManager.h  IMatchRoom.cpp  IMatchRoom.h  MatchRoom.cpp  MatchRoom.h  MatchRoomManager.cpp  MatchRoomManager.h  MatchServer.cpp  MatchServer.h  MatchServer.pro  QipaiAIThread.h  TableFrame.cpp  TableFrame.h  main.cpp
Framework/OrderServer/: AES_Cipher.cpp  BackCodeSet.h  CMakeLists.txt  OrderServer.cpp  OrderServer.h  OrderServer.pro  TxhAPI.hpp  aes.h  crypto.cpp  crypto.h  htmlcodec.h  main.cpp  mymd5.h
Framework/PayServer/: CMakeCache.txt  CMakeLists.txt  PayServer.pro  cmake_install.cmake
Framework/ProxyServer/: CMakeLists.txt  ProxyServer.cpp  ProxyServer.h  ProxyServer.pro  base64.h  main.cpp
Framework/RegisteServer/: BackCodeSet.h  CMakeLists.txt  FunClass.cpp  FunClass.h  Makefile_yangzhi  RegisteServer.cpp  RegisteServer.h  RegisteServer.pro  main.cpp
Framework/TransferServer/: CMakeLists.txt  TransferServer.pro
Framework/cmakefile/: CMakeLists2.txt  CMakeLists3.txt
Framework/include/: test
Framework/libs/: libbsoncxx.so.3.4.0  libcpr.so.1  libmongocxx.so.3.4.0  libzookeeper_mt.so.2.0.0  libzookeeper_st.so.2.0.0
Framework/mysqltest/: GameLogic.h  IAicsEngine.h  algorithmlogic.cpp  algorithmlogic.h  main.cpp  mysqltest.pro  redblackalgorithm.cpp  redblackalgorithm.h
Framework/thirdpart/crypto/: CMakeLists.txt  crypto.cpp  crypto.pro
Games/: gameid.txt  test.txt
Games/Game_BBQznnLandy/: CMD_Game.h  GameLogic.cpp  GameLogic.h  Game_BBQznnLandy.pro  TableFrameSink.cpp  TableFrameSink.h  TestCase.cpp  TestCase.h  bbqznn_casesix.conf
Games/Game_BBQznn_score_androidLandy/: AndroidUserItemSink.cpp  AndroidUserItemSink.h  Game_BBQznn_score_androidLandy.pro  stdafx.h
Games/Game_BaiJiaLeLandy/: BjlAlgorithm.cpp  BjlAlgorithm.h  CTableFrameSink.cpp  CTableFrameSink.h  GameLogic.cpp  GameLogic.h  Game_Bjl.pro
Games/Game_BaiJiale_androidLandy/: AndroidUserItemSink.cpp  AndroidUserItemSink.h  Game_Bjl_score_android.pro  game_Bjl_score_android.cpp  game_Bjl_score_android.h  game_Bjl_score_android_global.h  stdafx.h
Games/Game_Bcbm/: BcbmAlgorithm.cpp  betarea.h  (+7 more)
Games/Game_Bcbm_android/: AndroidUserItemSink.cpp  AndroidUserItemSink.h  CMakeLists.txt  Game_Bcbm_android.pro  Game_Jsys_android.pro
Games/Game_JCFish_score_android/: AndroidUserItemSink.cpp  AndroidUserItemSink.h  CMakeLists.txt  DefGameAndroidExport.cpp  DefGameAndroidExport.h  Game_JCFish_score_android.pro  Game_JCFish_score_android.sln  Game_JCFish_score_android.vcxproj  Game_JCFish_score_android.vcxproj.filters  ReadMe.txt  stdafx.cpp  stdafx.h
Games/Game_LKFish/fish_server/: CMakeLists.txt  CTableFrameSink.cpp  CTableFrameSink.h  FishProduceController.cpp  TraceInfo.h  UserPrefs.cpp
Games/Game_LKFish/fish_server/gameplay/collect/: CollectUtility.h
Games/Game_LKFish/fish_server/gameplay/msyq/: ActionMsyqRunBack.h  FishItemMsyq.cpp
Games/Game_LKFish/fish_server/gameplay/paipaile/: EffectPaipaile.h
Games/Game_Tbnn/: CMD_Game.h  CMakeLists.txt  GameLogic.cpp  GameLogic.h  Game_Tbnn.pro  TableFrameSink.cpp  TableFrameSink.h  TestCase.h  tbnn-case.conf  tbnn_config.ini
ScheduledTasks/: Curl.cc  ScheduledTasks.pro  algorithmlogic.cpp  algorithmlogic.h  main.cpp
build-ScheduledTasks/: Makefile
linux_include/: mysqlbind.h  mysqlimpl.h  tick.h  types.h
public/: AES_Cipher.h  AsciiEntity.hpp  CMakeLists.txt  CommonDB.cpp  CommonDB.h  ConsoleClr.h  DataBaseField.hpp  EntryPtr.h  Enum2String.cpp  Enum2String.h  EnumToString.cpp  EnumToString.h  ErrorCodeSet.h  GameGlobalFunc.cpp  GameGlobalFunc.h  GlobalFunc.cpp  GlobalFunc.h  Globals.h  IAndroidUserItemSink.h  INIHelp.h  IPFinder.h  ISaveReplayRecord.h  IServerUserItem.h  ITableFrame.h  ITableFrameSink.h  MyEventLoopThreadPool.cc  MyEventLoopThreadPool.h  Random.h  SubNetIP.h  TaskService.cpp  TaskService.h  ThreadLocalSingletonMongoDBClient.cpp  ThreadLocalSingletonMongoDBClient.h  ThreadLocalSingletonRedisClient.cpp  ThreadLocalSingletonRedisClient.h  UserProxyInfo.h  aes.h  base64.cpp  crypto.cpp  crypto.h  (+7 more)
public/RedisClient/: CMakeCache.txt  CMakeLists.txt  Makefile  RedisClient.cpp  RedisClient.h  cmake_install.cmake  redlock.cpp  redlock.h
public/RocketMQ/: RocketMQ.cpp
public/RocketMQ/include/: DefaultMQPullConsumer.h
public/TraceMsg/: FormatCmdId.cpp  FormatCmdId.h
public/pb2Json/: pb2Json.cpp  pb2Json.h
public/tony/: CMakeLists.txt  tony.cpp  tony.h
public/zookeeperclient/: CMakeLists.txt  zoo_lock.c  zookeeperclient.cpp  zookeeperclient.h  zookeeperclientutils.cpp  zookeeperclientutils.h  zookeeperlocker.cpp  zookeeperlocker.h
(+930 files in other folders)
